<resources>
    <string name="app_name">TestKM1</string>
    <string name="input_name">Name</string>
    <string name="input_palindrom">Palindrom</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="second_screen">Second Screen</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="name">Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="retry">Try Again</string>
</resources>